{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "e4c914c9-1d07-4f45-80d3-f731d7f9afc5",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "ffe63c7e-d3d4-4f90-b5e1-167c96053fc5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "807d3357-a018-4384-b8b2-78180df9c779",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "c04a9ab3-84d9-4bf5-8063-c2daf2e84da5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "4ef6bbea-4519-4ec6-98c8-3292adff7df3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "1998c7ce-7e69-414f-a626-4c97d3d0fbd1",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5dd90782-fe4f-40cc-9e0c-1ed55d62c593",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a83d867e-0346-4fc8-8a7e-b0969eb45c05",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "df36b1a2-41a9-45f2-81ee-134e990649b6",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8523e135-f35b-413f-b605-0f5c3ee87f69",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a52f2a52-bd7e-4725-abde-c4a0517a07b7",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ccb9ad3-ad20-488f-83a6-44b1b9e2cd19",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5366e635-4fde-49a8-bc16-baeb69b1a917",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerCamera",
            "id": "c1de9329-a086-4963-99fa-aae0349bddeb",
            "actions": [
                {
                    "name": "MouseLook",
                    "type": "PassThrough",
                    "id": "4d873e24-3263-46c5-addb-981108f1a4ac",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleCursor",
                    "type": "Button",
                    "id": "5ee7f38a-571f-4af4-8aa2-c47070c03d7e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8fce8eae-b8c8-4a23-b313-462dd77da928",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1d2b3365-1d30-4b9f-9d2f-55a63cb4baa6",
                    "path": "<Keyboard>/alt",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleCursor",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}